--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-Flask==1.0.2
 beautifulsoup4==4.7.1
 bs4==0.0.1
 requests==2.20.0
 APScheduler==3.7.0
+
+
+
+Flask==2.0.2
+Flask-SQLAlchemy==2.5.1
+SQLAlchemy==1.4.31
+greenlet==1.1.2
+psycopg2-binary>=2.8.6
