--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,7 +9,7 @@ on:
   push:
     branches: [ "master" ]
     # Publish semver tags as releases.
-    tags: [ 'v*.*.*' , "latest"]
+    tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ "master" ]
 
