--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,6 +15,7 @@ on:
 
 env:
   # Use docker.io for Docker Hub if empty
+  REGISTRY: docker.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: tonydelanuez/juxgen
 
